Finished guessing game from rust book

--- a/rust-book/guessing_game/Cargo.toml
+++ b/rust-book/guessing_game/Cargo.toml
@@ -1,4 +1,8 @@
 [package]
-name = "guessing_game"
-version = "0.1.0"
-authors = ["James Kahn <kahn.jms@gmail.com>"]
+  name = "guessing_game"
+  version = "0.1.0"
+  authors = ["James Kahn <kahn.jms@gmail.com>"]
+
+[dependencies]
+  rand="0.3.0"
+  
